some fix and swagger
