# app/routes/contact.routes.js
@@ -4,8 +4,7 @@ module.exports = (app) => {
     app.get('/api/contacts/',  contact.showall_contact)
     app.post('/api/contact/add', contact.add_contact)
     app.put('/api/contact/edit', contact.edit_contact)
-    app.delete('/api/contact/delete/', contact.delete_contact)
-    app.post('/api/contact/search', contact.search_contact)
-    app.get('/api/contact', contact.show_contact)
-    
+    app.delete('/api/contact/delete', contact.delete_contact)
+    app.get('/api/contact', contact.search_contact)
+    app.get('/api/contactpg', contact.show_contact)
 }
